--- a/lib/style.css
+++ b/lib/style.css
@@ -90,10 +90,10 @@ header, .container {
   }
 
   .navigation {
-    min-width: 200px;
+    min-width: 300px;
 
     order: 0;
-    flex: 2 1 auto;
+    flex: 4 1 auto;
     align-self: auto;
   }
 
@@ -109,6 +109,11 @@ header, .container {
 .navigation-list-item {
   list-style-type: none;
   margin-left: 0;
+  line-height: 1.6em;
+}
+
+.navigation-list-item:not(:last-child) {
+  margin-bottom: 1em;
 }
 
 .navigation-list-item a {
@@ -117,4 +122,14 @@ header, .container {
 
 .navigation-list-item a:hover {
   border-color: var(--color-secondary-1-3);
+}
+
+.your-turn {
+  padding: 1em;
+  background-color: var(--color-secondary-2-1);
+  border: 1px solid var(--color-secondary-2-4);
+}
+
+aside {
+  color: rgb(120, 120, 120);
 }
