--- a/lib/style.css
+++ b/lib/style.css
@@ -1,29 +1,14 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat|Cardo:400,700,400italic);
 
 :root {
-  --color-primary-0: rgba(121,235, 34,1);
-  --color-primary-1: rgba(171,243,116,1);
-  --color-primary-2: rgba(144,238, 72,1);
-  --color-primary-3: rgba(100,230,  0,1);
-  --color-primary-4: rgba( 77,178,  0,1);
+  --pink: rgb(231, 0, 74);
+  --blue: rgb(121, 202, 232);
 
-  --color-secondary-1-0: rgba( 39,122,191,1);
-  --color-secondary-1-1: rgba(111,170,218,1);
-  --color-secondary-1-2: rgba( 71,143,203,1);
-  --color-secondary-1-3: rgba( 10,101,177,1);
-  --color-secondary-1-4: rgba(  7, 74,129,1);
+  --your-turn: rgb(255, 189, 96);
+  --your-turn-border: rgb(174, 122, 56);
 
-  --color-secondary-2-0: rgba(255,163, 37,1);
-  --color-secondary-2-1: rgba(255,199,121,1);
-  --color-secondary-2-2: rgba(255,180, 77,1);
-  --color-secondary-2-3: rgba(255,148,  0,1);
-  --color-secondary-2-4: rgba(200,116,  0,1);
-
-  --color-complement-0: rgba(237, 34, 92,1);
-  --color-complement-1: rgba(245,116,153,1);
-  --color-complement-2: rgba(240, 73,121,1);
-  --color-complement-3: rgba(233,  0, 67,1);
-  --color-complement-4: rgba(180,  0, 52,1);
+  --code-block: rgb(255, 243, 227);
+  --code-block-border: rgb(254, 217, 167);
 
   --header-font: Montserrat, sans-serif;
   --body-font: Cardo, Georgia, serif;
@@ -57,7 +42,7 @@ a {
   color: rgb(25, 25, 25);
   text-decoration: none;
   font-weight: bold;
-  border-bottom: 5px solid var(--color-primary-0);
+  border-bottom: 5px solid var(--blue);
 }
 
 a:hover, a:visited, a:active {
@@ -65,11 +50,17 @@ a:hover, a:visited, a:active {
 }
 
 a:hover {
-  border-color: var(--color-secondary-2-0);
+  border-color: var(--pink);
 }
 
 a:active {
-  background-color: var(--color-complement-1);
+  background-color: var(--pink);
+}
+
+pre {
+  padding: 1em;
+  background-color: var(--code-block);
+  border: 1px solid var(--code-block-border);
 }
 
 /* Layout */
@@ -116,18 +107,10 @@ header, .container {
   margin-bottom: 1em;
 }
 
-.navigation-list-item a {
-  border-color: var(--color-secondary-2-3);
-}
-
-.navigation-list-item a:hover {
-  border-color: var(--color-secondary-1-3);
-}
-
 .your-turn {
   padding: 1em;
-  background-color: var(--color-secondary-2-1);
-  border: 1px solid var(--color-secondary-2-4);
+  background-color: var(--your-turn);
+  border: 1px solid var(--your-turn-border);
 }
 
 aside {
