--- a/lib/style.css
+++ b/lib/style.css
@@ -89,21 +89,23 @@ header, .container {
   }
 
   .navigation {
-    min-width: 300px;
-
     order: 0;
-    flex: 4 1 auto;
+    flex: 1;
     align-self: auto;
   }
 
   .content {
     order: 0;
-    flex: 8 1 auto;
+    flex: 3;
     align-self: auto;
   }
 }
 
 /* Modules */
+
+.navigation-list {
+  padding-left: 0;
+}
 
 .navigation-list-item {
   list-style-type: none;
